MODFILES = \
	ramst.mod \
	ramst_a.mod \
	example1.mod \
	example2.mod \
	example1_use_dll.mod \
	example1_with_tags.mod \
	example1_irf_shocks.mod \
	example1_abs_sign.mod \
	t_sgu_ex1.mod \
	osr_example.mod \
	optimal_policy/ramsey.mod \
	optimal_policy/nk_ramsey.mod \
	optimal_policy/nk_ramsey_expectation.mod \
	optimal_policy/nk_ramsey_expectation_a.mod \
	optimal_policy/mult_elimination_test.mod \
	discretionary_policy/dennis_1.mod \
	ramst_initval_file.mod \
	ramst_normcdf_and_friends.mod \
	ramst_vec.mod \
	example1_varexo_det.mod \
	predetermined_variables.mod \
	fs2000_nonstationary.mod \
	fs2000_ssfile.mod \
	comments.mod \
	histval_sto.mod \
	histval_det.mod \
	auxiliary_variables/test1.mod \
	expectations/expectation.mod \
	expectations/expectation_ss.mod \
	expectations/expectation_ss_old.mod \
	expectations/expectation_nested.mod \
	steady_state/walsh1_initval.mod \
	steady_state/walsh1_old_ss.mod \
	steady_state/walsh1_ssm.mod \
	steady_state/walsh1_ssm_block.mod \
	steady_state/multi_leads.mod \
	steady_state_operator/standard.mod \
	steady_state_operator/use_dll.mod \
	steady_state_operator/block.mod \
	steady_state_operator/bytecode_test.mod \
	block_bytecode/ireland.mod \
	block_bytecode/ramst_normcdf_and_friends.mod \
	k_order_perturbation/fs2000k2a.mod \
	k_order_perturbation/fs2000k2_use_dll.mod \
	k_order_perturbation/fs2000k_1_use_dll.mod \
	k_order_perturbation/fs2000k3_use_dll.mod \
	k_order_perturbation/fs2000k2_m.mod \
	k_order_perturbation/fs2000k_1_m.mod \
	k_order_perturbation/fs2000k3_m.mod \
	partial_information/PItest3aHc0PCLsimModPiYrVarobsAll.mod \
	partial_information/PItest3aHc0PCLsimModPiYrVarobsCNR.mod \
	arima/mod1.mod \
	arima/mod1a.mod \
	arima/mod1b.mod \
	arima/mod1c.mod \
	arima/mod2.mod \
	arima/mod2a.mod \
	arima/mod2b.mod \
	arima/mod2c.mod \
	fs2000/fs2000.mod \
	fs2000/fs2000a.mod \
	fs2000/fs2000c.mod \
	fs2000/fs2000d.mod \
	fs2000/fs2000_cmaes.mod \
	fs2000/fs2000_calib.mod \
	fs2000/fs2000_analytic_derivation.mod \
	fs2000/fs2000_particle.mod \
	homotopy/homotopy1_test.mod \
	homotopy/homotopy2_test.mod \
	homotopy/homotopy3_test.mod \
	bvar_a_la_sims/bvar_standalone.mod \
	bvar_a_la_sims/bvar_and_dsge.mod \
	AIM/fs2000x10L9_L.mod \
	AIM/fs2000x10L9_L_AIM.mod \
	AIM/fs2000x10_L9_L.mod \
	AIM/fs2000x10_L9_L_AIM.mod \
	AIM/fs2000_b1L1L.mod \
	AIM/fs2000_b1L1L_AIM.mod \
	AIM/ls2003_2L0L.mod \
	AIM/ls2003_2L0L_AIM.mod \
	AIM/ls2003_2L2L.mod \
	AIM/ls2003_2L2L_AIM.mod \
	conditional_variance_decomposition/example1.mod \
	dsge-var/simul_hybrid.mod \
	dsge-var/dsgevar_forward_calibrated_lambda.mod \
	dsge-var/dsgevar_forward_estimated_lambda.mod \
	external_function/example1_1st_and_2nd_deriv_functions_provided.mod \
	external_function/example1_1st_and_2nd_deriv_functions_provided_dll.mod \
	external_function/example1_1st_deriv_function_provided.mod \
	external_function/example1_1st_deriv_function_provided_dll.mod \
	external_function/example1_no_deriv_functions_provided.mod \
	external_function/example1_no_deriv_functions_provided_dll.mod \
	seeds.mod \
	gsa/ls2003.mod \
	identification/kim/kim2.mod \
	identification/as2007/as2007.mod \
	simul/example1.mod \
	conditional_forecasts/fs2000_cal.mod \
	conditional_forecasts/fs2000_est.mod \
	recursive/ls2003.mod \
	recursive/ls2003_bayesian.mod \
	ms-sbvar/test_exclusions.mod \
	ms-sbvar/test_exclusions_nc.mod \
	ms-sbvar/test_lower_cholesky.mod \
	ms-sbvar/test_lower_cholesky_a.mod \
	ms-sbvar/test_lower_cholesky_nc.mod \
	ms-sbvar/test_upper_cholesky.mod \
	ms-sbvar/test_upper_cholesky_nc.mod \
	ms-sbvar/test_ms_variances.mod \
	ms-sbvar/test_ms_variances_repeated_runs.mod \
	kalman_filter_smoother/gen_data.mod \
	kalman_filter_smoother/algo1.mod \
	kalman_filter_smoother/algo2.mod \
	kalman_filter_smoother/algo3.mod \
	kalman_filter_smoother/algo4.mod \
	kalman_filter_smoother/algo4a.mod \
	kalman_filter_smoother/algo4b.mod \
	kalman_filter_smoother/algoH1.mod \
	kalman_filter_smoother/algoH2.mod \
	kalman_filter_smoother/algoH3.mod \
	kalman_filter_smoother/fs2000.mod \
	kalman_filter_smoother/fs2000_1.mod \
	kalman_filter_smoother/fs2000_2.mod \
	kalman_filter_smoother/fs2000a.mod \
	second_order/burnside_1.mod \
	second_order/ds1.mod \
	second_order/ds2.mod \
	ep/rbc.mod \
	ep/rbc2.mod \
	ep/rbcii.mod \
	ep/linear.mod \
	deterministic_simulations/deterministic_model_purely_forward.mod \
	deterministic_simulations/deterministic_model_purely_backward.mod \
	deterministic_simulations/rbc_det1.mod \
	deterministic_simulations/rbc_det2.mod \
	deterministic_simulations/rbc_det3.mod \
	deterministic_simulations/rbc_det4.mod \
	deterministic_simulations/rbc_det5.mod \
	fs2000/fs2000_sd.mod

EXTRA_DIST = \
	$(MODFILES) \
	homotopy/common.mod \
	block_bytecode/ls2003.mod \
	fs2000_ssfile_aux.m \
	printMakeCheckMatlabErrMsg.m \
	printMakeCheckOctaveErrMsg.m \
	ramst_initval_file_data.m \
	run_test.m \
	run_test_matlab.m \
	run_test_octave.m \
	test.m \
	AIM/data_ca1.m \
	AIM/fs2000_b1L1L_AIM_steadystate.m \
	AIM/fs2000_b1L1L_steadystate.m \
	AIM/fsdat.m \
	block_bytecode/run_ls2003.m \
	bvar_a_la_sims/bvar_sample.m \
	external_function/extFunDeriv.m \
	external_function/extFunNoDerivs.m \
	external_function/extFunWithFirstAndSecondDerivs.m \
	expectations/expectation_ss_old_steadystate.m \
	steady_state/walsh1_old_ss_steadystate.m \
	fs2000/fs2000a_steadystate.m \
	fs2000/fsdat_simul.m \
	k_order_perturbation/run_fs2000kplusplus.m \
	ls2003/data_ca1.m \
	measurement_errors/data_ca1.m \
	missing/simulate_data_with_missing_observations.m \
	objectives/sgu_ex1.mat \
	conditional_forecasts/fsdat_simul.m \
	ms-sbvar/data.m \
	ms-sbvar/archive-files/ftd_2s_caseall_upperchol3v.m \
	ms-sbvar/archive-files/ftd_2s_caseall_upperchol4v.m \
	ms-sbvar/archive-files/ftd_2s_caseall_upperchol6v.m \
	ms-sbvar/archive-files/ftd_2s_caseall_upperchol7v.m \
	ms-sbvar/archive-files/ftd_RSvensson_4v.m \
	ms-sbvar/archive-files/ftd_cholesky.m \
	ms-sbvar/archive-files/ftd_non_rec_5v.m \
	ms-sbvar/archive-files/ftd_simszha5v.m \
	ms-sbvar/archive-files/ftd_upperchol3v.m \
	ms-sbvar/archive-files/ftd_upperchol4v.m \
	ms-sbvar/archive-files/ftd_upperchol5v.m \
	ms-sbvar/archive-files/ftd_upperchol6v.m \
	ms-sbvar/archive-files/ftd_upperchol7v.m \
	ms-sbvar/archive-files/specification_2v.dat \
	ms-sbvar/archive-files/specification_2v2c.dat \
	recursive/data_ca1.m \
	kalman_filter_smoother/fsdat_simul.m \
	kalman_filter_smoother/fs2000a_steadystate.m \
	identification/kim/kim2_steadystate.m \
	ep/mean_preserving_spread.m

TARGETS =

if HAVE_CMD_LINE_MATLAB
TARGETS += check-matlab
endif

if HAVE_OCTAVE
TARGETS += check-octave
endif

check-local: $(TARGETS)

check-matlab:
	DYNARE_VERSION="$(PACKAGE_VERSION)" MODFILES="$(MODFILES)" $(MATLAB)/bin/matlab -nodesktop -nosplash -r run_test_matlab

check-octave:
	DYNARE_VERSION="$(PACKAGE_VERSION)" MODFILES="$(MODFILES)" $(OCTAVE) --norc --silent --no-history run_test_octave.m

clean-local:
	rm -f $(patsubst %.mod, %.m, $(MODFILES)) \
		$(patsubst %.mod, %_static.*, $(MODFILES)) \
		$(patsubst %.mod, %_objective_static.m, $(MODFILES)) \
		$(patsubst %.mod, %_set_auxiliary_variables.m, $(MODFILES)) \
		$(patsubst %.mod, %_steadystate2.m, $(MODFILES)) \
		$(patsubst %.mod, %_dynamic.*, $(MODFILES))

	rm -f $(patsubst %.mod, %_results.mat, $(MODFILES)) \
		$(patsubst %.mod, %_mode.mat, $(MODFILES)) \
		$(patsubst %.mod, %_mh_mode.mat, $(MODFILES)) \
		$(patsubst %.mod, %_mean.mat, $(MODFILES)) \
		$(patsubst %.mod, %_pindx.mat, $(MODFILES)) \
		$(patsubst %.mod, %_params.mat, $(MODFILES)) \
		$(patsubst %.mod, %_simul, $(MODFILES)) \
		$(patsubst %.mod, %.log, $(MODFILES))

	rm -rf $(patsubst %.mod, %, $(MODFILES))

	rm -f $(patsubst %.mod, %*.pdf, $(MODFILES)) \
		$(patsubst %.mod, %*.eps, $(MODFILES)) \
		$(patsubst %.mod, %*.fig, $(MODFILES))

	rm -f $(shell find -name g1.mat) \
		$(shell find -name g2.mat) \
		$(shell find -name g3.mat) \
		$(shell find -name H.dat)

	rm -f arima/data1.m arima/data2.m \
		k_order_perturbation/*.jnl \
		k_order_perturbation/*.mat

	rm -rf ramsey_objective

	rm -f fs2000_ssfile_steadystate.m

	rm -f $(shell find -name '*~')

	rm -f dsge-var/datarabanal_hybrid.m

	rm -rf partial_information/PItest3aHc0PCLsimModPiYrVarobsAll_PCL* partial_information/PItest3aHc0PCLsimModPiYrVarobsCNR_PCL*

	rm -rf block_bytecode/ls2003_tmp*

	rm -f $(shell find -name wsOct) \
		$(shell find -name wsMat.mat)

	rm -f run_test_matlab_output.txt run_test_octave_output.txt
