noinst_LIBRARIES = libsylv.a

libsylv_a_SOURCES = \
	IterativeSylvester.cpp \
	cpplapack.h \
	SylvMatrix.h \
	QuasiTriangular.cpp \
	QuasiTriangularZero.cpp \
	TriangularSylvester.h \
	GeneralMatrix.cpp \
	SylvMemory.h \
	SylvException.h \
	GeneralSylvester.cpp \
	GeneralMatrix.h \
	Vector.h \
	SchurDecompEig.h \
	QuasiTriangularZero.h \
	SimilarityDecomp.cpp \
	BlockDiagonal.h \
	SylvesterSolver.h \
	SylvException.cpp \
	cppblas.h \
	SimilarityDecomp.h \
	IterativeSylvester.h \
	SchurDecompEig.cpp \
	KronUtils.h \
	Vector.cpp \
	TriangularSylvester.cpp \
	GeneralSylvester.h \
	SylvParams.cpp \
	SchurDecomp.h \
	SymSchurDecomp.h \
	BlockDiagonal.cpp \
	SylvParams.h \
	KronVector.cpp \
	SylvMemory.cpp \
	SymSchurDecomp.cpp \
	SylvMatrix.cpp \
	QuasiTriangular.h \
	SchurDecomp.cpp \
	KronVector.h \
	KronUtils.cpp

# Generate position independent code for k-order DLL
libsylv_a_CXXFLAGS = $(PICFLAG)
