noinst_LIBRARIES = libsylv.a

# For dynblas.h and dynlapack.h
libsylv_a_CPPFLAGS = -I$(top_srcdir)/mex/sources

libsylv_a_SOURCES = \
	IterativeSylvester.cpp \
	SylvMatrix.h \
	QuasiTriangular.cpp \
	QuasiTriangularZero.cpp \
	TriangularSylvester.h \
	GeneralMatrix.cpp \
	SylvMemory.h \
	SylvException.h \
	GeneralSylvester.cpp \
	GeneralMatrix.h \
	Vector.h \
	SchurDecompEig.h \
	QuasiTriangularZero.h \
	SimilarityDecomp.cpp \
	BlockDiagonal.h \
	SylvesterSolver.h \
	SylvException.cpp \
	SimilarityDecomp.h \
	IterativeSylvester.h \
	SchurDecompEig.cpp \
	KronUtils.h \
	Vector.cpp \
	TriangularSylvester.cpp \
	GeneralSylvester.h \
	SylvParams.cpp \
	SchurDecomp.h \
	SymSchurDecomp.h \
	BlockDiagonal.cpp \
	SylvParams.h \
	KronVector.cpp \
	SylvMemory.cpp \
	SymSchurDecomp.cpp \
	SylvMatrix.cpp \
	QuasiTriangular.h \
	SchurDecomp.cpp \
	KronVector.h \
	KronUtils.cpp
